Bug 103656 - Fix alignment and spacing in presence menu: 1. Reduce space between each menu item 2. For each menu, vertically align presence icon and text
https://bugzilla.zimbra.com/show_bug.cgi?id=103656

Copied from Perforce
 Change: 564312

--- a/converse/converse.js-0.9.4/css/converse.css
+++ b/converse/converse.js-0.9.4/css/converse.css
@@ -1575,3 +1575,18 @@
 /*Adjust top padding so that content is vertically center aligned in minimized Buddy List header */
 #conversejs .toggle-controlbox {
   padding-top: .7rem; }
+
+/*Vertical spacing between menu items in Presence menu*/
+#conversejs .xmpp-status-menu li a.online,
+#conversejs .xmpp-status-menu li a.away,
+#conversejs .xmpp-status-menu li a.dnd,
+#conversejs .xmpp-status-menu li a.offline {
+  line-height: 1.7rem; }
+
+/*Vertically align the presence icons and text in the Presence menu*/
+#conversejs .xmpp-status-menu li a span.icon-online,
+#conversejs .xmpp-status-menu li a span.icon-away,
+#conversejs .xmpp-status-menu li a span.icon-dnd,
+#conversejs .xmpp-status-menu li a span.icon-offline {
+  position: relative;
+  top: 0.14rem; }
